cloudformation/loadbalanced.yml
AWSTemplateFormatVersion: 2010-09-09

Description: loadbalanced service

Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  Subnets:
    Description: Choose which subnets the Network Load Balancer should be deployed to
    Type: List<AWS::EC2::Subnet::Id>

Resources:
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP access via port 80 and SSH access
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '8080'
        CidrIp: '0.0.0.0/0'

  LaunchConfiguration:
    Type: AWS::AutoScaling::LaunchConfiguration
    Metadata:
      AWS::CloudFormation::Init:
        config:
          packages:
            git: []
            golang: []
    Properties:
      AssociatePublicIpAddress: true
      InstanceType: 't2.large'
      SecurityGroups: [!Ref 'WebServerSecurityGroup']
      KeyName: !Ref 'KeyName'
      ImageId: 'ami-0841edc20334f9287'
      LaunchConfigurationName: 'LaunchConfiguration'
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -xe
          # Install the files and packages from the metadata
          /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource LaunchConfiguration --region ${AWS::Region}
          iptables -A PREROUTING -t nat -p tcp --dport 80 -j REDIRECT --to-ports 8080
          cd /home/ec2-user; git clone https://github.com/Nickhil-Sethi/vigilant-robot.git
          su ec2-user; export HOME=/home/ec2-user
          cd vigilant-robot/; go build -o bin ./hello-world/; ./bin

  LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: 'TheLoadBalancer'
      Type: 'network'
      Subnets: !Ref 'Subnets'        

  AutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      VPCZoneIdentifier: !Ref 'Subnets'
      AutoScalingGroupName: 'AutoScalingGroup'
      DesiredCapacity: 1
      HealthCheckGracePeriod: 15
      LaunchConfigurationName: !Ref 'LaunchConfiguration'
      LoadBalancerNames: [!Ref 'LoadBalancer']
      MaxSize: 1
      MinSize: 1
Outputs:
  Name:
    Description: Stack Name
    Value: !Ref AWS::StackName
    Export:
      Name: !Sub ${AWS::StackName}-Name

  LoadBalancerEndpoint:
    Description: LoadBalancers server's endpoint
    Value: !GetAtt LoadBalancer.DNSName
